Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Portfolio – Don Jacques</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
-  <!-- ===== TOPBAR ===== -->
   <header class="topbar">
     <div class="topbar-inner">
       <span class="brand">Don Jacques</span>
 
       <nav class="topbar-nav">
         <a class="active" href="index.html">About</a>
-        <a href="projets.html">Projets</a>
+        <a href="projet.html">Projets</a>
         <a href="competences.html">Compétences</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- ===== ABOUT / HERO ===== -->
-  <main class="about-page">
+  <main class="page about-page">
     <section class="hero">
-
       <div class="hero-bg" aria-hidden="true"></div>
 
       <div class="hero-inner">
-
         <div class="hero-content">
           <span class="about-pill">About me</span>
 
-          <h1 class="hero-title">
-            Salut, moi c’est <span>Don Jacques</span>
-          </h1>
+          <h1 class="hero-title">Salut, moi c’est <span>Don Jacques</span></h1>
 
           <p class="hero-subtitle">
             J’ai 19 ans, étudiant en BUT MMI à l’IUT de Corte. Passionné par l’audiovisuel,
@@ -44,7 +37,7 @@
           </p>
 
           <div class="hero-actions">
-            <a class="btn btn-primary" href="projets.html">Voir mes projets</a>
+            <a class="btn btn-primary" href="projet.html">Voir mes projets</a>
             <a class="btn btn-ghost" href="contact.html">Me contacter</a>
           </div>
 
@@ -65,7 +58,7 @@
         </div>
 
         <aside class="profile-card">
-          <div class="avatar"></div>
+          <div class="avatar" aria-hidden="true"></div>
 
           <div class="profile-text">
             <h2>À propos</h2>
@@ -77,13 +70,8 @@
 
           <a class="next-btn" href="projet.html">Next →</a>
         </aside>
-
       </div>
     </section>
   </main>
-
-  <script src="transition.js"></script>
 </body>
 </html>
-
-
