Refactor competences.html with updated content
Updated skill descriptions and improved HTML structure.

--- a/competences.html
+++ b/competences.html
@@ -2,31 +2,27 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Compétences – Don Jacques</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
   <header class="topbar">
     <div class="topbar-inner">
-      <div class="topbar-left">
-        <span class="brand">Don Jacques</span>
-      </div>
+      <span class="brand">Don Jacques</span>
 
       <nav class="topbar-nav">
         <a href="index.html">About</a>
-        <a href="projets.html">Projets</a>
+        <a href="projet.html">Projets</a>
         <a class="active" href="competences.html">Compétences</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main class="skillsv3">
+  <main class="page skillsv3">
     <div class="skillsv3-inner">
-
       <div class="page-nav">
         <a class="back-btn" href="projet.html">← Retour</a>
       </div>
@@ -34,18 +30,16 @@
       <header class="skillsv3-header">
         <div class="skillsv3-pill">Mes compétences</div>
         <h1 class="skillsv3-title">Compétences</h1>
-        <p class="skillsv3-subtitle">
-          Outils et compétences principales que j’utilise au quotidien sur mes projets.
-        </p>
+        <p class="skillsv3-subtitle">Outils et compétences principales utilisées dans mes projets.</p>
       </header>
 
       <section class="skillsv3-grid">
-
         <article class="skillcard" style="--level:40%">
           <div class="skillcard-top">
             <span class="sicon ps">Ps</span>
             <div class="sinfo">
               <h3>Photoshop</h3>
+              <p>Retouche, compositing, visuels</p>
             </div>
             <span class="spercent">40%</span>
           </div>
@@ -57,6 +51,7 @@
             <span class="sicon ai">Ai</span>
             <div class="sinfo">
               <h3>Illustrator</h3>
+              <p>Logo, vectoriel, identité</p>
             </div>
             <span class="spercent">60%</span>
           </div>
@@ -68,7 +63,7 @@
             <span class="sicon vscode">&lt;/&gt;</span>
             <div class="sinfo">
               <h3>Développement</h3>
-
+              <p>HTML / CSS / JS</p>
             </div>
             <span class="spercent">50%</span>
           </div>
@@ -80,19 +75,17 @@
             <span class="sicon pr">Pr</span>
             <div class="sinfo">
               <h3>Premiere Pro</h3>
+              <p>Montage, rythme, export</p>
             </div>
             <span class="spercent">70%</span>
           </div>
           <div class="sbar"><div class="sfill"></div></div>
         </article>
-
       </section>
 
       <a class="skillsv3-next" href="contact.html">Next →</a>
     </div>
   </main>
-
-  <script src="transition.js"></script>
 </body>
 </html>
 
