Revise contact.html structure and information
Updated contact page layout and content.

--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,15 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact – Don Jacques</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
   <header class="topbar">
     <div class="topbar-inner">
-      <div class="topbar-left">
-        <span class="brand">Don Jacques</span>
-      </div>
+      <span class="brand">Don Jacques</span>
 
       <nav class="topbar-nav">
         <a href="index.html">About</a>
@@ -24,9 +21,8 @@
     </div>
   </header>
 
-  <main class="contactv3">
+  <main class="page contactv3">
     <div class="contactv3-inner">
-
       <div class="page-nav">
         <a class="back-btn" href="competences.html">← Retour</a>
       </div>
@@ -34,54 +30,49 @@
       <header class="contactv3-header">
         <div class="contactv3-pill">Me contacter</div>
         <h1 class="contactv3-title">Contact</h1>
-        <p class="contactv3-subtitle">
-        </p>
+        <p class="contactv3-subtitle">Une idée, une collab, un projet ? Écris-moi ou contacte-moi directement.</p>
       </header>
 
       <section class="contactv3-grid">
-
-        <!-- Carte infos -->
         <div class="contactv3-card">
           <h2 class="contactv3-cardtitle">Infos</h2>
 
           <div class="contactv3-list">
-
             <a class="citem" href="mailto:donjacquescarli@gmail.com">
-              <span class="cicon" aria-hidden="true">✉️</span>
+              <span class="cicon">✉️</span>
               <div class="ctext">
                 <div class="clabel">Email</div>
                 <div class="cvalue">donjacquescarli@gmail.com</div>
               </div>
-              <span class="carrow" aria-hidden="true">→</span>
+              <span class="carrow">→</span>
             </a>
 
             <a class="citem" href="tel:+33603665801">
-              <span class="cicon" aria-hidden="true">📞</span>
+              <span class="cicon">📞</span>
               <div class="ctext">
                 <div class="clabel">Téléphone</div>
                 <div class="cvalue">06 03 66 58 01</div>
               </div>
-              <span class="carrow" aria-hidden="true">→</span>
+              <span class="carrow">→</span>
             </a>
 
             <a class="citem" href="https://instagram.com/dj_carli" target="_blank" rel="noopener">
-              <span class="cicon" aria-hidden="true">📸</span>
+              <span class="cicon">📸</span>
               <div class="ctext">
                 <div class="clabel">Instagram</div>
                 <div class="cvalue">@dj_carli</div>
               </div>
-              <span class="carrow" aria-hidden="true">→</span>
+              <span class="carrow">→</span>
             </a>
 
             <a class="citem" href="https://x.com/carli7562" target="_blank" rel="noopener">
-              <span class="cicon" aria-hidden="true">𝕏</span>
+              <span class="cicon">𝕏</span>
               <div class="ctext">
                 <div class="clabel">X</div>
                 <div class="cvalue">@carli7562</div>
               </div>
-              <span class="carrow" aria-hidden="true">→</span>
+              <span class="carrow">→</span>
             </a>
-
           </div>
 
           <div class="contactv3-note">
@@ -92,10 +83,7 @@
         <div class="contactv3-card">
           <h2 class="contactv3-cardtitle">M’envoyer un message</h2>
 
-          <form class="cform"
-                action="mailto:donjacquescarli@gmail.com"
-                method="post"
-                enctype="text/plain">
+          <form class="cform" action="mailto:donjacquescarli@gmail.com" method="post" enctype="text/plain">
             <label class="cfield">
               <span>Nom</span>
               <input type="text" name="Nom" placeholder="Ton nom" required />
@@ -113,16 +101,13 @@
 
             <button class="cbtn" type="submit">Envoyer →</button>
 
-            <p class="cform-hint">
-            </p>
+            <p class="cform-hint">(Le bouton ouvre ton application mail avec le message pré-rempli.)</p>
           </form>
         </div>
-
       </section>
-
     </div>
   </main>
-
 </body>
 </html>
+
 
