Refactor audiovisuel.html structure and comments
Updated the HTML structure and added comments for better readability.

--- a/audiovisuel.html
+++ b/audiovisuel.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audiovisuel – Don Jacques</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+  <!-- ===== TOPBAR ===== -->
   <header class="topbar">
     <div class="topbar-inner">
-      <span class="brand">Don Jacques</span>
+      <div class="topbar-left">
+        <span class="brand">Don Jacques</span>
+      </div>
 
       <nav class="topbar-nav">
         <a href="index.html">About</a>
-        <a class="active" href="projet.html">Projets</a>
+        <a class="active" href="projets.html">Projets</a>
         <a href="competences.html">Compétences</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main class="page projectv3">
+  <!-- ===== PAGE AUDIOVISUEL ===== -->
+  <main class="projectv3">
     <div class="projectv3-inner">
+
       <div class="page-nav">
-        <a class="back-btn" href="projet.html">← Retour</a>
+        <a class="back-btn" href="projets.html">← Retour</a>
       </div>
 
       <header class="projectv3-header">
         <div class="projectv3-pill">Catégorie</div>
         <h1 class="projectv3-title">Audiovisuel</h1>
-        <p class="projectv3-subtitle">Montage, réalisation, projets vidéo (MMI et perso).</p>
+        <p class="projectv3-subtitle">
+          Montage, réalisation, projets vidéo (MMI et perso).
+        </p>
       </header>
 
       <section class="projectv3-grid">
+
+        <!-- PROJET 1 : VIDEO -->
         <article class="pcard">
-          <a class="pcard-link" href="https://youtu.be/JfJ-2L9fKXw" target="_blank" rel="noopener">
+          <a class="pcard-link" href="https://youtu.be/JfJ-2L9fKXw">
             <div class="pcard-media p1">
-              <video class="pcard-video" src="videos/kickboxing.mp4" muted autoplay loop playsinline></video>
+              <video
+                class="pcard-video"
+                src="videos/kickboxing.mp4"
+                muted
+                autoplay
+                loop
+                playsinline
+              ></video>
             </div>
 
             <div class="pcard-overlay">
-              <span class="pcard-tag">Vidéo</span>
+              <div class="pcard-tag">Vidéo</div>
               <div class="pcard-bottom">
                 <h3>Interview Kickboxing</h3>
                 <p>Montage / réalisation</p>
@@ -51,11 +68,12 @@
           </a>
         </article>
 
+        <!-- PROJET 2 -->
         <article class="pcard">
           <a class="pcard-link" href="#">
             <div class="pcard-media p2"></div>
             <div class="pcard-overlay">
-              <span class="pcard-tag">Projet</span>
+              <div class="pcard-tag">Projet</div>
               <div class="pcard-bottom">
                 <h3>Projet 2</h3>
                 <p>Clip / captation</p>
@@ -65,21 +83,8 @@
           </a>
         </article>
 
+        <!-- PROJET 3 -->
         <article class="pcard">
           <a class="pcard-link" href="#">
             <div class="pcard-media p3"></div>
-            <div class="pcard-overlay">
-              <span class="pcard-tag">Projet</span>
-              <div class="pcard-bottom">
-                <h3>Projet 3</h3>
-                <p>Story / montage</p>
-                <span class="pcard-cta">Voir →</span>
-              </div>
-            </div>
-          </a>
-        </article>
-      </section>
-    </div>
-  </main>
-</body>
-</html>
+            <div class="pcard-
