--- a/competences.html
+++ b/competences.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Compétences – Don Jacques</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header class="topbar">
     <div class="topbar-inner">
-      <span class="brand">Don Jacques</span>
+      <div class="topbar-left">
+        <span class="brand">Don Jacques</span>
+      </div>
 
       <nav class="topbar-nav">
         <a href="index.html">About</a>
-        <a href="projet.html">Projets</a>
+        <a href="projets.html">Projets</a>
         <a class="active" href="competences.html">Compétences</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main class="page skillsv3">
+  <main class="skillsv3">
     <div class="skillsv3-inner">
       <div class="page-nav">
-        <a class="back-btn" href="projet.html">← Retour</a>
+        <a class="back-btn" href="projets.html">← Retour</a>
       </div>
 
       <header class="skillsv3-header">
         <div class="skillsv3-pill">Mes compétences</div>
         <h1 class="skillsv3-title">Compétences</h1>
-        <p class="skillsv3-subtitle">Outils et compétences principales utilisées dans mes projets.</p>
+        <p class="skillsv3-subtitle">
+          Outils et compétences principales utilisées dans mes projets.
+        </p>
       </header>
 
       <section class="skillsv3-grid">
@@ -86,7 +90,8 @@
       <a class="skillsv3-next" href="contact.html">Next →</a>
     </div>
   </main>
+
+  <script src="transition.js"></script>
 </body>
 </html>
-
 
