--- a/creations.html
+++ b/creations.html
@@ -1,122 +1,99 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graphisme – Don Jacques</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header class="topbar">
     <div class="topbar-inner">
-      <span class="brand">Don Jacques</span>
+      <div class="topbar-left">
+        <span class="brand">Don Jacques</span>
+      </div>
 
       <nav class="topbar-nav">
         <a href="index.html">About</a>
-        <a class="active" href="projet.html">Projets</a>
+        <a class="active" href="projets.html">Projets</a>
         <a href="competences.html">Compétences</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main class="page projectv3">
+  <main class="projectv3">
     <div class="projectv3-inner">
+
       <div class="page-nav">
-        <a class="back-btn" href="projet.html">← Retour</a>
+        <a class="back-btn" href="projets.html">← Retour</a>
       </div>
 
       <header class="projectv3-header">
         <div class="projectv3-pill">Catégorie</div>
         <h1 class="projectv3-title">Graphisme</h1>
-        <p class="projectv3-subtitle">Affiches et créations graphiques.</p>
+        <p class="projectv3-subtitle">
+          
+        </p>
       </header>
 
       <section class="projectv3-grid">
+
+        <!-- PROJET 1 (affiche ajoutée ici via .p1) -->
         <article class="pcard">
-          <button class="pcard-link pcard-btn"
-            data-img="https://chatgpt.com/backend-api/estuary/content?id=file_00000000bfec7230b691742647c9bd83&v=0">
+          <a class="pcard-link" href="https://chatgpt.com/backend-api/estuary/content?id=file_00000000bfec7230b691742647c9bd83&ts=491712&p=fs&cid=1&sig=7b5822b528701ab2924f1423c940e71fdbc2a3fa8c81ebba21aeb72fce718f35&v=0">
             <div class="pcard-media p1"></div>
             <div class="pcard-overlay">
-              <span class="pcard-tag">Affiche</span>
+              <div class="pcard-tag">Affiche</div>
               <div class="pcard-bottom">
                 <h3>Corsica Games Week 2026</h3>
                 <p>Affiche / composition visuelle</p>
                 <span class="pcard-cta">Voir →</span>
               </div>
             </div>
-          </button>
+          </a>
         </article>
 
         <article class="pcard">
-          <button class="pcard-link pcard-btn"
-            data-img="https://chatgpt.com/backend-api/estuary/content?id=file_00000000798471f8824a0f1b6fea7c34&v=0">
+          <a class="pcard-link" href="https://chatgpt.com/backend-api/estuary/content?id=file_00000000798471f8824a0f1b6fea7c34&ts=491712&p=fs&cid=1&sig=d422d29f2d579b66eec1b9e693ca3ff9d629695b5457ab453d0e69e965fef5d1&v=0">
             <div class="pcard-media p2"></div>
             <div class="pcard-overlay">
-              <span class="pcard-tag">Affiche</span>
+              <div class="pcard-tag">Projet</div>
               <div class="pcard-bottom">
-                <h3>Théâtre</h3>
-                <p>Affiche scène de théâtre</p>
+                <h3>Projet 2</h3>
+                <p>Affiche scene de theatre</p>
                 <span class="pcard-cta">Voir →</span>
               </div>
             </div>
-          </button>
+          </a>
         </article>
 
         <article class="pcard">
-          <button class="pcard-link pcard-btn"
-            data-img="https://chatgpt.com/backend-api/estuary/content?id=file_00000000a20071f68668a0073a0c3833&v=0">
+          <a class="pcard-link" href="https://chatgpt.com/backend-api/estuary/content?id=file_00000000a20071f68668a0073a0c3833&ts=491712&p=fs&cid=1&sig=81e1b1f82229c4c4631d7eadbb2e4e8680ba9df5375e52e85069f4655345d29b&v=0">
             <div class="pcard-media p3"></div>
             <div class="pcard-overlay">
-              <span class="pcard-tag">Affiche</span>
+              <div class="pcard-tag">Projet</div>
               <div class="pcard-bottom">
-                <h3>Parfum</h3>
-                <p>Affiche publicitaire</p>
+                <h3>Projet 3</h3>
+                <p>Affiche de parfum</p>
                 <span class="pcard-cta">Voir →</span>
               </div>
             </div>
-          </button>
+          </a>
         </article>
+
       </section>
     </div>
   </main>
 
-  <!-- MODAL -->
-  <div class="img-modal" id="imgModal" aria-hidden="true">
-    <button class="img-close" id="imgClose" aria-label="Fermer">✕</button>
-    <img id="modalImg" src="" alt="Image projet" />
-  </div>
+  <script src="transition.js"></script>
+ 
+<div class="img-modal" id="imgModal">
+  <span class="img-close" id="imgClose">✕</span>
+  <img id="modalImg" src="" alt="Image projet">
+</div>
 
-  <script>
-    const modal = document.getElementById("imgModal");
-    const img = document.getElementById("modalImg");
-    const closeBtn = document.getElementById("imgClose");
-
-    document.querySelectorAll(".pcard-btn").forEach(btn => {
-      btn.addEventListener("click", () => {
-        img.src = btn.dataset.img;
-        modal.classList.add("open");
-        modal.setAttribute("aria-hidden", "false");
-      });
-    });
-
-    function closeModal(){
-      modal.classList.remove("open");
-      modal.setAttribute("aria-hidden", "true");
-      img.src = "";
-    }
-
-    closeBtn.addEventListener("click", closeModal);
-
-    modal.addEventListener("click", (e) => {
-      if(e.target === modal) closeModal();
-    });
-
-    document.addEventListener("keydown", (e) => {
-      if(e.key === "Escape" && modal.classList.contains("open")) closeModal();
-    });
-  </script>
 </body>
 </html>
 
